WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191917
[Cocoa] clang emits a warning when building WebKit after
r238293
https://bugs.webkit.org/show_bug.cgi?id=191917
Summary
[Cocoa] clang emits a warning when building WebKit after r238293
Wenson Hsieh
Reported
2018-11-22 18:57:41 PST
This is the warning: CompileC WKShareSheet.o Ld WebKit ld: warning: instance method 'isSafeBrowsingEnabled' in category from /Users/whsieh/Build/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64e/UnifiedSource17-mm.o overrides method from class in /Users/whsieh/Build/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64e/UnifiedSource17-mm.o ld: warning: instance method 'setSafeBrowsingEnabled:' in category from /Users/whsieh/Build/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64e/UnifiedSource17-mm.o overrides method from class in /Users/whsieh/Build/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64e/UnifiedSource17-mm.o PhaseScriptExecution Check For Weak VTables and Externals PhaseScriptExecution Check For Inappropriate Objective-C Class Names ...it looks like both -setSafeBrowsingEnabled: and -isSafeBrowsingEnabled are implemented in the WKPrivate category, but should instead be implemented in the main category.
Attachments
Patch
(1.97 KB, patch)
2018-11-22 19:03 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-11-22 19:03:56 PST
Created
attachment 355495
[details]
Patch
WebKit Commit Bot
Comment 2
2018-11-22 20:00:38 PST
Comment on
attachment 355495
[details]
Patch Clearing flags on attachment: 355495 Committed
r238455
: <
https://trac.webkit.org/changeset/238455
>
WebKit Commit Bot
Comment 3
2018-11-22 20:00:39 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-11-22 20:02:17 PST
<
rdar://problem/46217146
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug