[Cocoa] clang emits a warning when building WebKit after r238293 https://bugs.webkit.org/show_bug.cgi?id=191917

Reviewed by Dan Bernstein.

Move the implementations of -setSafeBrowsingEnabled: and -isSafeBrowsingEnabled to the main implementation of
WKPreferences to fix the warning.

* UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences setSafeBrowsingEnabled:]):
(-[WKPreferences isSafeBrowsingEnabled]):


Canonical link: https://commits.webkit.org/206624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238455 268f45cc-cd09-0410-ab3c-d52691b4dbfc